cloud-formations/vpc-cft.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "This template deploys a VPC, with 3 public and 3 private subnets spread across 3 Availability Zones. It deploys an internet gateway, with a default route on the public subnets. It deploys NAT gateways, and default routes for them in the private subnets and it will create NACL with default configuration",
    "Parameters": {
        "VpcCIDR": {
            "Description": "Please enter the IP range (CIDR notation) for this VPC",
            "Type": "String",
            "Default": "10.0.0.0/16"
        },
        "VpcDnsSupport": {
            "Description": "VPC with dns suppport",
            "Type": "String",
            "Default": "false"
        },
        "VpcDnsHostnames": {
            "Description": "VPC with dns hostnames",
            "Type": "String",
            "Default": "false"
        },
        "PublicSubnet1CIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone",
            "Type": "String",
            "Default": "10.0.1.0/24"
        },
        "PublicSubnet2CIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone",
            "Type": "String",
            "Default": "10.0.2.0/24"
        },
        "PublicSubnet3CIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone",
            "Type": "String",
            "Default": "10.0.3.0/24"
        },
        "PrivateSubnet1CIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone",
            "Type": "String",
            "Default": "10.0.4.0/24"
        },
        "PrivateSubnet2CIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone",
            "Type": "String",
            "Default": "10.0.5.0/24"
        },
        "PrivateSubnet3CIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone",
            "Type": "String",
            "Default": "10.0.6.0/24"
        },
        "PublicSubnetMapPublicIpOnLaunch": {
            "Description": "Map public Ip for instaces which will launch on public subnets",
            "Type": "String",
            "Default": "true"
        },
        "PrivateSubnetMapPublicIpOnLaunch": {
            "Description": "Map public Ip for instaces which will launch on private subnets",
            "Type": "String",
            "Default": "false"
        },
        "VpcNameTagValue": {
            "Description": "Value of the Owner tag",
            "Type": "String",
            "Default":"Manju-VPC"
        },
        "EnvTagValue": {
            "Description": "Value of the Env tag",
            "AllowedValues": [
				"Dev",
				"Prod"
			],
			"Type": "String",
            "Default":"Dev"
        },
        "OwnerTagValue": {
            "Description": "Value of the Owner tag",
            "Type": "String",
            "Default":"Manju"
        }
    },
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "VpcCIDR"
                },
                "EnableDnsSupport": {
                    "Ref": "VpcDnsSupport"
                },
                "EnableDnsHostnames": {
                    "Ref": "VpcDnsHostnames"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
							"Fn::Sub": "${EnvTagValue} Vpc"
                        }
                    },
                    {
                        "Key": "Env",
                        "Value": {
                            "Ref": "EnvTagValue"
                        }
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "OwnerTagValue"
                        }
                    },
                    {
						"Key": "StackName",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
                    {
						"Key": "StackId",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
                ]
            }
        },
        "PublicSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "PublicSubnet1CIDR"
                },
                "MapPublicIpOnLaunch": {
                    "Ref": "PublicSubnetMapPublicIpOnLaunch"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${EnvTagValue} Public 1a"
                        }
                    },
                    {
                        "Key": "Env",
                        "Value": {
                            "Ref": "EnvTagValue"
                        }
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "OwnerTagValue"
                        }
                    },
                    {
						"Key": "StackName",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
                    {
						"Key": "StackId",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
                ]
            }
        },
        "PublicSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "PublicSubnet2CIDR"
                },
                "MapPublicIpOnLaunch": {
                    "Ref": "PublicSubnetMapPublicIpOnLaunch"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${EnvTagValue} Public 1b"
                        }
                    },
                    {
                        "Key": "Env",
                        "Value": {
                            "Ref": "EnvTagValue"
                        }
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "OwnerTagValue"
                        }
                    },
                    {
						"Key": "StackName",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
                    {
						"Key": "StackId",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
                ]
            }
        },
        "PublicSubnet3": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        2,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "PublicSubnet3CIDR"
                },
                "MapPublicIpOnLaunch": {
                    "Ref": "PublicSubnetMapPublicIpOnLaunch"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${EnvTagValue} Public 1c"
                        }
                    },
                    {
                        "Key": "Env",
                        "Value": {
                            "Ref": "EnvTagValue"
                        }
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "OwnerTagValue"
                        }
                    },
                    {
						"Key": "StackName",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
                    {
						"Key": "StackId",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
                ]
            }
        },
        "PrivateSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "PrivateSubnet1CIDR"
                },
                "MapPublicIpOnLaunch": {
                    "Ref": "PrivateSubnetMapPublicIpOnLaunch"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${EnvTagValue} Private 1a"
                        }
                    },
                    {
                        "Key": "Env",
                        "Value": {
                            "Ref": "EnvTagValue"
                        }
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "OwnerTagValue"
                        }
                    },
                    {
						"Key": "StackName",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
                    {
						"Key": "StackId",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
                ]
            }
        },
        "PrivateSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "PrivateSubnet2CIDR"
                },
                "MapPublicIpOnLaunch": {
                    "Ref": "PrivateSubnetMapPublicIpOnLaunch"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${EnvTagValue} Private 1b"
                        }
                    },
                    {
                        "Key": "Env",
                        "Value": {
                            "Ref": "EnvTagValue"
                        }
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "OwnerTagValue"
                        }
                    },
                    {
						"Key": "StackName",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
                    {
						"Key": "StackId",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
                ]
            }
        },
        "PrivateSubnet3": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        2,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "PrivateSubnet3CIDR"
                },
                "MapPublicIpOnLaunch": {
                    "Ref": "PrivateSubnetMapPublicIpOnLaunch"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${EnvTagValue} Private 1c"
                        }
                    },
                    {
                        "Key": "Env",
                        "Value": {
                            "Ref": "EnvTagValue"
                        }
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "OwnerTagValue"
                        }
                    },
                    {
						"Key": "StackName",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
                    {
						"Key": "StackId",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
                ]
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
							"Fn::Sub": "${EnvTagValue} G/W"
						}
                    },
                    {
                        "Key": "Env",
                        "Value": {
                            "Ref": "EnvTagValue"
                        }
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "OwnerTagValue"
                        }
                    },
                    {
						"Key": "StackName",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
                    {
						"Key": "StackId",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
                ]
            }
        },
        "InternetGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                },
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "NatGatewayEIP": {
            "Type": "AWS::EC2::EIP",
            "DependsOn": "InternetGatewayAttachment",
            "Properties": {
                "Domain": "vpc",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
							"Fn::Sub": "${EnvTagValue} NAT EIP"
						}
                    },
                    {
                        "Key": "Env",
                        "Value": {
                            "Ref": "EnvTagValue"
                        }
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "OwnerTagValue"
                        }
                    },
                    {
						"Key": "StackName",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
                    {
						"Key": "StackId",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
                ]
            }
        },
        "NatGateway": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "NatGatewayEIP",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "PublicSubnet1"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
							"Fn::Sub": "${EnvTagValue} NAT Gateway"
						}
                    },
                    {
                        "Key": "Env",
                        "Value": {
                            "Ref": "EnvTagValue"
                        }
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "OwnerTagValue"
                        }
                    },
                    {
						"Key": "StackName",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
                    {
						"Key": "StackId",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
                ]
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
							"Fn::Sub": "${EnvTagValue} Public Routes"
						}
                    },
                    {
                        "Key": "Env",
                        "Value": {
                            "Ref": "EnvTagValue"
                        }
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "OwnerTagValue"
                        }
                    },
                    {
						"Key": "StackName",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
                    {
						"Key": "StackId",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
                ]
            }
        },
        "DefaultPublicRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "InternetGatewayAttachment",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "PublicSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "PublicSubnet1"
                }
            }
        },
        "PublicSubnet2RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "PublicSubnet2"
                }
            }
        },
        "PublicSubnet3RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "PublicSubnet3"
                }
            }
        },
        "PrivateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
							"Fn::Sub": "${EnvTagValue} Private Routes"
						}
                    },
                    {
                        "Key": "Env",
                        "Value": {
                            "Ref": "EnvTagValue"
                        }
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "OwnerTagValue"
                        }
                    },
                    {
						"Key": "StackName",
						"Value": {
							"Ref": "AWS::StackName"
						}
					},
                    {
						"Key": "StackId",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
                ]
            }
        },
        "DefaultPrivateRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NatGateway"
                }
            }
        },
        "PrivateSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "PrivateSubnet1"
                }
            }
        },
        "PrivateSubnet2RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "PrivateSubnet2"
                }
            }
        },
        "PrivateSubnet3RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "PrivateSubnet3"
                }
            }
        }
    },
    "Outputs": {
        "VPC": {
            "Description": "A reference to the created VPC",
            "Value": {
                "Ref": "VPC"
            }
        },
        "PublicSubnets": {
            "Description": "A list of the public subnets",
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "PublicSubnet1"
                        },
                        {
                            "Ref": "PublicSubnet2"
                        },
                        {
                            "Ref": "PublicSubnet3"
                        }
                    ]
                ]
            }
        },
        "PrivateSubnets": {
            "Description": "A list of the private subnets",
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "PrivateSubnet1"
                        },
                        {
                            "Ref": "PrivateSubnet2"
                        },
                        {
                            "Ref": "PrivateSubnet3"
                        }
                    ]
                ]
            }
        },
        "PublicSubnet1": {
            "Description": "A reference to the public subnet in the 1st Availability Zone",
            "Value": {
                "Ref": "PublicSubnet1"
            }
        },
        "PublicSubnet2": {
            "Description": "A reference to the public subnet in the 2nd Availability Zone",
            "Value": {
                "Ref": "PublicSubnet2"
            }
        },
        "PublicSubnet3": {
            "Description": "A reference to the public subnet in the 3rd Availability Zone",
            "Value": {
                "Ref": "PublicSubnet3"
            }
        },
        "PrivateSubnet1": {
            "Description": "A reference to the private subnet in the 1st Availability Zone",
            "Value": {
                "Ref": "PrivateSubnet1"
            }
        },
        "PrivateSubnet2": {
            "Description": "A reference to the private subnet in the 2nd Availability Zone",
            "Value": {
                "Ref": "PrivateSubnet2"
            }
        },
        "PrivateSubnet3": {
            "Description": "A reference to the private subnet in the 3rd Availability Zone",
            "Value": {
                "Ref": "PrivateSubnet3"
            }
        },
        "InternetGateway": {
            "Description": "A reference to the created IGWGW",
            "Value": {
                "Ref": "InternetGateway"
            }
        },
        "NatGatewayEIP": {
            "Description": "A reference to the created NAT EIP",
            "Value": {
                "Ref": "NatGatewayEIP"
            }
        },
        "NatGateway": {
            "Description": "A reference to the created NATGW",
            "Value": {
                "Ref": "NatGateway"
            }
        },
        "PublicRouteTable": {
            "Description": "A reference to the created public route table",
            "Value": {
                "Ref": "PublicRouteTable"
            }
        },
        "PrivateRouteTable": {
            "Description": "A reference to the created private route table",
            "Value": {
                "Ref": "PrivateRouteTable"
            }
        },
        "DefaultSecurityGroup": {
            "Description": "DefaultSecurityGroup Id",
            "Value": {
                "Fn::GetAtt": [
                    "VPC",
                    "DefaultSecurityGroup"
                ]
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::Region}-${AWS::StackName}-DefaultSecurityGroup"
                }
            }
        }
    }
}
